Fix some gradle warnings and IntelliJ warnings